# digital-independence

./: .gitignore  README.md
.github/workflows/: check-links.yml
doc-link-checker/: Cargo.toml
kurs/01-einstieg-open-source/: 01-digital-independence.md  02-was-ist-open-source.md  03-lizenzen.md  04-geschaeftsmodelle.md  05-communities-und-gruende.md  06-open-source-risiken.md  README.md
kurs/02-einstieg-linux/: 01-was-ist-linux.md  02-distributionen.md  03-linux-installation.md  04-ubuntu-server-setup.md  README.md
kurs/03-filesharing-und-groupware/: 01-nextcloud.md  02-nextcloud-aio-setup.md  03-datenbanken.md  04-plugins.md  05-ki-features.md  06-tls-exkurs.md  README.md  nextcloud-troubleshooting.md
kurs/06-sichere-kommunikation/: 01-bedrohungsmodell.md  02-e2ee.md  03-matrix.md  04-jitsi.md  05-einordnung.md  README.md  exkurs-jitsi-setup.md  exkurs-synapse.md
kurs/07-backups/: 01-immich-installation-und-backups.md  README.md
wiki/: glossar.md
wiki/components/: 01-datenbanken-ueberblick.md  02-postgresql-grundlagen.md  03-nginx-grundlagen.md  04-redis-grundlagen.md
wiki/container/: docker-compose.md  docker.md
wiki/linux_basics/: 01-linux-mental-model.md  02-linux-shell.md  03-users-groups-permissions.md  04-paketverwaltung.md  05-prozesse-systemueberwachung.md  06-cron-geplante-aufgaben.md  07-shell-scripting.md  08-dateisystem-einhaengen.md  09-updates-sicherheit.md
wiki/server-and-network/: 01-ip-domain-dns.md  02-host-port-protokolle.md  03-ssh.md  04-ssl-letsencrypt.md  05-reverse-proxy.md  06-vps.md
wiki/server-hardening/: 02-fail2ban.md  (+4 more)
(+4 files in other folders)
